[gd_scene load_steps=4 format=3 uid="uid://yoheftjc1m62"]

[ext_resource type="PackedScene" uid="uid://b0j1ddhsdm4kt" path="res://scenes/game_cell.tscn" id="1_dse78"]
[ext_resource type="Script" path="res://scripts/game_cell_container.gd" id="1_y84af"]
[ext_resource type="Script" path="res://scripts/composition/draggable.gd" id="3_pg1xt"]

[node name="game_cell_container" type="Control"]
custom_minimum_size = Vector2(620, 420)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -934.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_y84af")
metadata/_edit_vertical_guides_ = [666.0, 620.0]
metadata/_edit_horizontal_guides_ = [420.0]

[node name="dropable_area" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 20.0
offset_right = 633.0
offset_bottom = 400.0
color = Color(0.2, 0.25, 0, 0.41)

[node name="game_cell" parent="." instance=ExtResource("1_dse78")]
offset_left = 48.0
offset_top = 32.0
offset_right = 618.0
offset_bottom = 392.0
mouse_filter = 1

[node name="draggable" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 32.0
offset_right = 618.0
offset_bottom = 386.0
mouse_filter = 1
mouse_default_cursor_shape = 6
keep_pressed_outside = true
script = ExtResource("3_pg1xt")
_draggable_element_path = NodePath("../game_cell")

[connection signal="button_down" from="draggable" to="draggable" method="_on_button_down"]
[connection signal="button_up" from="draggable" to="draggable" method="_on_button_up"]
[connection signal="mouse_entered" from="draggable" to="draggable" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="draggable" to="draggable" method="_on_mouse_exited"]
